# networking-passport

./: LICENSE  README.md  sponsor.json  user.json
backend/: README.md  analytics.py  pyproject.toml  template.yaml  top_sponsors.py  user_profiles.json
backend/function/: check_existence.py  create_sponsor_jwt.py  eventbrite_webhook.py  get_information.py  get_passport_status.py  models.py  requirements.txt  stamp_passport.py  unlock_activation.py  update_fields.py  utils.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  base-api.ts  main.tsx
frontend/src/components/: ActivateProfile.tsx  NavBar.tsx  ProfileItem.tsx  ProfilePage.tsx  RedirectHandler.tsx  SearchParticipant.tsx  SocialLinkInput.tsx  SponsorLogin.tsx  SponsorPage.tsx  Stamp.tsx
frontend/src/types/: profile.ts  validation.ts
