[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.29"
aws-lambda-powertools = {extras = ["tracer"], version = "^3.0.0"}


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pydantic-to-typescript2 = "^1.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
